# assembler

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dev.Dockerfile  dev.lint.Dockerfile  init.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  build.yml  lint.yml  test.yml
PROJECT_NAME/: main.py
samples/: sample.asm
src/: __init__.py  main.py
tests/: __init__.py  test_basic.py
