[tool.poetry]
name = "PROJECT_NAME"
version = "1.0.0"
description = "PROJECT_DESCRIPTION"
authors = ["Matthew Gleich <matthewgleich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
